src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Membership_Expires__c</fullName>
        <description>Calculates from the latest membership renewal.</description>
        <inlineHelpText>Calculates from the latest membership renewal.  To change this, you have to find the latest membership renewal and change the membership expires date there.</inlineHelpText>
        <label>Account Membership Expires</label>
        <summarizedField>Opportunity.Membership_End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Membership</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctLatitude__c</fullName>
        <description>IF(BillingLatitude&lt;&gt;null, BillingLatitude, ShippingLatitude) .  This field reveals the hidden Address Latitude fields.</description>
        <formula>IF(TEXT(BillingLatitude)&lt;&gt;null,BillingLatitude,ShippingLatitude)</formula>
        <inlineHelpText>IF(BillingLatitude&lt;&gt;null, BillingLatitude, ShippingLatitude) .  This field reveals the hidden Address Latitude fields.</inlineHelpText>
        <label>AcctLatitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctLongitude__c</fullName>
        <description>IF(BillingLongitude&lt;&gt;null, BillingLongitude, ShippingLongitude) .  This field reveals the hidden Address Longitude fields.</description>
        <formula>IF(TEXT(BillingLongitude)&lt;&gt;null, BillingLongitude, ShippingLongitude)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF(BillingLongitude&lt;&gt;null, BillingLongitude, ShippingLongitude) .  This field reveals the hidden Address Longitude fields.</inlineHelpText>
        <label>AcctLongitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Latitude__c</fullName>
        <inlineHelpText>Placeholder for legacy Latitude.</inlineHelpText>
        <label>Address Latitude</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address_Longitude__c</fullName>
        <label>Address Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Addressee__c</fullName>
        <description>Primary addressee for this account.  (If it has more than one person.)</description>
        <inlineHelpText>Primary addressee for this account.</inlineHelpText>
        <label>Addressee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_HUC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing HUC</label>
        <referenceTo>HUC__c</referenceTo>
        <relationshipLabel>Accounts (Billing HUC)</relationshipLabel>
        <relationshipName>BillingAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Uses Account Name for all Accounts except Family/Household, which are left blank.  Use this with blank line suppression in mail merges.</description>
        <formula>IF( RecordType.DeveloperName = &quot;Family&quot;, &quot;&quot;,  Name )</formula>
        <inlineHelpText>Uses Account Name for all Accounts except Family/Household, which are left blank.  Use this with blank line suppression in mail merges.</inlineHelpText>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constant1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constant1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacts_in_Account__c</fullName>
        <description>Used for the enterAccountContact page and controller.  When set to 2, it reveals a second set of fields for the &quot;second contact&quot;</description>
        <inlineHelpText>Used for the enterAccountContact page and controller.  When set to 2, it reveals a second set of fields for the &quot;second contact&quot;</inlineHelpText>
        <label>Contacts_in_Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dear__c</fullName>
        <description>The name that appears after &quot;Dear_&quot; in the first line of a letter.  For example, for Mr. John Q. Public, you might want &quot;Dear JQ:&quot;  Then the value you want in the &quot;Dear__&quot; field is &quot;JQ.&quot;</description>
        <inlineHelpText>The name that appears after &quot;Dear_&quot; in the first line of a letter.  For example, for Mr. John Q. Public, you might want &quot;Dear JQ:&quot;  Then the value you want in the &quot;Dear__&quot; field is &quot;JQ.&quot;</inlineHelpText>
        <label>Dear</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not__c</fullName>
        <description>Permissions for communicating with contacts.</description>
        <inlineHelpText>WaterGrass assumes that contacts will accept all forms of communication unless one of these fields is checked. You can set permission for the ACCOUNT on this page or for the CONTACT on the contact page.</inlineHelpText>
        <label>Do Not</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>no email</fullName>
                </value>
                <value>
                    <fullName>no email solicitations</fullName>
                </value>
                <value>
                    <fullName>no mail</fullName>
                </value>
                <value>
                    <fullName>no mail solicitations</fullName>
                </value>
                <value>
                    <fullName>no phone calls</fullName>
                </value>
                <value>
                    <fullName>no phone solicitations</fullName>
                </value>
                <value>
                    <fullName>only one solicitation a year</fullName>
                </value>
                <value>
                    <fullName>share with other lists</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donations_in_Timeframe_X__c</fullName>
        <description>Total of all the contributions by this account within this date range.</description>
        <inlineHelpText>Total of all the contributions by this account within a users specified date range.</inlineHelpText>
        <label>Donations in Timeframe X</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2017</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Challenge, Donation, Major Donation, Membership</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Contrib_Cat__c</fullName>
        <description>The type of campaign that brought in the account&apos;s first contribution.  This field is calculated automatically.</description>
        <inlineHelpText>The type of campaign that brought in the account&apos;s first contribution.</inlineHelpText>
        <label>First_Contrib_Cat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contrib_Source__c</fullName>
        <description>Source of the first contribution made by this account</description>
        <label>First_Contrib_Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Donate_Date__c</fullName>
        <label>First_Donate_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Donation_Date__c</fullName>
        <description>Date of first donation (checks for contributions that are of RecordTypes included in the INdividual Donation custom setting)</description>
        <inlineHelpText>Date of first donation (checks for contributions that are of RecordTypes included in the INdividual Donation custom setting)</inlineHelpText>
        <label>First_Donation_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Member_Date__c</fullName>
        <description>Date of first membership.</description>
        <inlineHelpText>Date of first membership.</inlineHelpText>
        <label>First_Member_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Member_Source__c</fullName>
        <description>Name of the campaign that first gotthis person to sign up as a member.</description>
        <inlineHelpText>Name of the campaign that first gotthis person to sign up as a member.</inlineHelpText>
        <label>First_Member_Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Application_Website__c</fullName>
        <label>Grant Application Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HUC_Code__c</fullName>
        <description>The numeric code for the watershed, from the USGS mapping.  If you insert this manually, you should set the Status to &quot;Do not change&quot; or it may be overwritten later.</description>
        <inlineHelpText>The numeric code for the watershed, from the USGS mapping.  If you insert this manually, you should set the Status to &quot;Do not change&quot; or it may be overwritten later.</inlineHelpText>
        <label>HUC_Code</label>
        <length>52</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUC_Errors__c</fullName>
        <description>Errors generated by the USGS service or by WaterGrass when WaterGrass requests HUC code for an address.</description>
        <inlineHelpText>Errors generated by the USGS service or by WaterGrass when WaterGrass requests HUC code for an address.</inlineHelpText>
        <label>HUC_Errors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HUC_Status__c</fullName>
        <description>Set to &quot;Do not change&quot; if you want to protect the HUC_Code from future changes.</description>
        <inlineHelpText>Set to &quot;Do not change&quot; if you want to protect the HUC_Code from future changes.</inlineHelpText>
        <label>HUC_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HUCStati</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HUC_Subsubwatershed__c</fullName>
        <description>From the USGS HUC-14 designation, where it is available.  As of July 2017, it was only available in parts of Alaska.</description>
        <inlineHelpText>From the USGS HUC-14 designation, where it is available.  As of July 2017, it was only available in parts of Alaska.</inlineHelpText>
        <label>HUC_Subsubwatershed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUC_Subwatershed__c</fullName>
        <description>The USGS subwatershed associated with the HUC 12 code.  WaterGrass populates this from the USGS webservice.</description>
        <inlineHelpText>The USGS subwatershed associated with the HUC 12 code.  WaterGrass populates this from the USGS webservice.</inlineHelpText>
        <label>HUC_Subwatershed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUC_Watershed__c</fullName>
        <description>Watershed associated with the HUC 10 level.  Pulled from the USGS data service.</description>
        <inlineHelpText>Watershed associated with the HUC 10 level.  Pulled from the USGS data service.</inlineHelpText>
        <label>HUC_Watershed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Largest_Contrib_Date__c</fullName>
        <label>Largest_Contrib_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Largest_Contrib__c</fullName>
        <description>Largest monetary contribution of any kind.</description>
        <inlineHelpText>Largest monetary contribution of any kind.</inlineHelpText>
        <label>Largest_Contrib</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastNameInitial__c</fullName>
        <formula>LEFT( Name , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastNameInitial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Contrib_Amount__c</fullName>
        <description>The last donation (not grant) amount.</description>
        <inlineHelpText>The last donation (not grant) amount received from this account.</inlineHelpText>
        <label>Last_Contrib_Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Contrib_Date__c</fullName>
        <label>Last_Contrib_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contrib_Source__c</fullName>
        <description>Which campaign did the last contribution (of any type) originate from?</description>
        <inlineHelpText>Which campaign did the last contribution (of any type) originate from?</inlineHelpText>
        <label>Last_Contrib_Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Donate_Amount__c</fullName>
        <description>Amount of last donation, major donation, or challenge.</description>
        <inlineHelpText>Last closedate on any contribution, including payments, events, and volunteer hours.</inlineHelpText>
        <label>Last Donate Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Donate_Amt__c</fullName>
        <label>Last_Donate_Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Donate_Date__c</fullName>
        <description>Not a roll-up.  This is calculated by the ManageContribs controller.</description>
        <inlineHelpText>Not a roll-up.  This is calculated by the ManageContribs controller.</inlineHelpText>
        <label>Last_Donate_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Member_Amt__c</fullName>
        <description>Amount of last membership payment.</description>
        <inlineHelpText>Amount of last membership payment.</inlineHelpText>
        <label>Last_Member_Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Membership_Amount__c</fullName>
        <label>Last Membership Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Membership_Date__c</fullName>
        <description>Field calculated by ManageContributions controller.  Can be overwritten.  Refresh using the &quot;Recalculate Account Giving&quot; button.</description>
        <inlineHelpText>Field calculated by ManageContributions controller.  Can be overwritten.  Refresh using the &quot;Recalculate Account Giving&quot; button.</inlineHelpText>
        <label>Last_Membership_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Year_Donations__c</fullName>
        <label>Last_Year_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_ID__c</fullName>
        <description>Used to match imported accounts to imported donations</description>
        <inlineHelpText>Used to match imported accounts to imported donations</inlineHelpText>
        <label>Legacy Account ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Donations__c</fullName>
        <description>All contributions that have a recordType (Donation, Membership,etc.) which is one of the Individual Donation RecordTypes.  (See Custom Settings.)</description>
        <inlineHelpText>All contributions that have a recordType (Donation, Membership,etc.) which is one of the Individual Donation RecordTypes.  (See Custom Settings.)</inlineHelpText>
        <label>Lifetime_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Major_Donor_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this flag if you want this account treated as a major donor account.  That means they won&apos;t be picked up by the Renewals report which pulls names for renewal mailings, or by the appeals report which pulls names for the appeal mailings.</description>
        <inlineHelpText>Set this flag if you want this account treated as a major donor account.  That means they won&apos;t be picked up by the Renewals report which pulls names for renewal mailings, or by the appeals report which pulls names for the appeal mailings.</inlineHelpText>
        <label>Major Donor Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>hyperlink (&quot;/servlet/servlet.Integration?lid=00b70000000mr5H&amp;eid=&quot; &amp;Id, IMAGE( &quot;servlet/servlet.FileDownload?file=01570000000MKgu&quot;, &quot;image from Documents tab&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Match__c</fullName>
        <label>Max Match</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Per_Employee__c</fullName>
        <label>Max. Per Employee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Match__c</fullName>
        <label>Min Match</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NameBlockNoBlankLines__c</fullName>
        <description>Addressee and Company formula field to allow labels with Addressee or Company lines suppressed as appropriate (if merged in SF as separate fields in Word templates, the line is left blank with an underline - a feature of SF since they think it will be a form where blanks indicate information that should be filled in).</description>
        <formula>IF( RecordType.Name = &quot;Family&quot;, Addressee__c , IF(AND (RecordType.Name &lt;&gt; &quot;Family&quot;, ISBLANK ( Addressee__c )), Company__c , Addressee__c &amp; BR() &amp; Company__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Addressee and Company formula field to allow labels with Addressee or Company lines suppressed as appropriate (if merged in SF as separate fields in Word templates, the line is left blank with an underline.</inlineHelpText>
        <label>NameBlockNoBlankLines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_for_Account_Cutoff__c</fullName>
        <description>When will you stop sending newsletter to this account?  (Expiration date)</description>
        <inlineHelpText>When will you stop sending newsletter to this account?  (Expiration date)</inlineHelpText>
        <label>Newsletter for Account Cutoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Newsletter_for_Account__c</fullName>
        <description>If other than &quot;none&quot;, send a newsletter to the account.</description>
        <inlineHelpText>If checked, send a newsletter to the primary contact in the account.  (It can also be sent to the specific contact.  Try to send newsletters to accounts and not contacts, unless it&apos;s necessary.)</inlineHelpText>
        <label>Newsletter for Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nr_Contacts_In_Acct__c</fullName>
        <label>Nr_Contacts_In_Acct</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_HUC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping HUC</label>
        <referenceTo>HUC__c</referenceTo>
        <relationshipLabel>Accounts (Shipping HUC)</relationshipLabel>
        <relationshipName>ShippingAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subsubwatershed__c</fullName>
        <description>The HUC14 Name value from the USGS Hydro website.</description>
        <inlineHelpText>The HUC14 Name value from the USGS Hydro website.</inlineHelpText>
        <label>Subsubwatershed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subwatershed__c</fullName>
        <description>You can insert your own watershed name here manually.  This is not the HUC_Subwatershed, which is populated from the USGS web service.</description>
        <inlineHelpText>You can insert your own watershed name here manually.  This is not the HUC_Subwatershed, which is populated from the USGS web service.</inlineHelpText>
        <label>Subwatershed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_Text__c</fullName>
        <formula>CASE(MONTH(TODAY()), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &quot; &quot; + 
TEXT(DAY(TODAY())) 
+ &quot;, &quot; + TEXT(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VolHours_in_Timeframe_X__c</fullName>
        <description>The total volunteer hours given by this account in the timeframe you specify.  You specify the timeframe by editing the field itself.</description>
        <inlineHelpText>The total volunteer hours given by this account in the timeframe you specify.  You specify the timeframe by editing the field itself.</inlineHelpText>
        <label>VolHours in Timeframe X</label>
        <summarizedField>Opportunity.Hours_Actual__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Volunteer Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2014</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Watershed__c</fullName>
        <description>You can insert your own watershed name here manually.  This is not the HUC_Watershed, which is populated from the USGS web service.</description>
        <inlineHelpText>You can insert your own watershed name here manually.  This is not the HUC_Watershed, which is populated from the USGS web service.</inlineHelpText>
        <label>Watershed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_Give_To__c</fullName>
        <label>Will Give To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts, Culture, and Humanities</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Environment and Animals</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Human Services</fullName>
                </value>
                <value>
                    <fullName>International, Foreign Affairs</fullName>
                </value>
                <value>
                    <fullName>Mutual/Membership Benefit</fullName>
                </value>
                <value>
                    <fullName>Public, Societal Benefit</fullName>
                </value>
                <value>
                    <fullName>Religion Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3_Years_Ago_Donations__c</fullName>
        <label>3_Years_Ago_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X4_Years_Ago_Donations__c</fullName>
        <label>4_Years_Ago_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X5_Years_Ago_Donations__c</fullName>
        <label>5_Years_Ago_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YearToDate_Donations__c</fullName>
        <label>YearToDate_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Before_Last_Donations__c</fullName>
        <label>Year_Before_Last_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Business_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business</value>
        </filters>
        <label>All Businesses</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>Use this record type for corporations or small businesses</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <description>School or educational institution</description>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Family</fullName>
        <active>true</active>
        <description>Use this for individuals or families</description>
        <label>Family</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <description>Use this record type for foundation entities</description>
        <label>Foundation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government</fullName>
        <active>true</active>
        <description>Use this record type for government agencies (federal, local or state)</description>
        <label>Government</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Board of directors, committees, teams</description>
        <label>Internal</label>
    </recordTypes>
</CustomObject>